opam-version: "1.2"
maintainer: "Christophe Troestler <Christophe.Troestler@umons.ac.be>"
authors: [ "Christophe Troestler <Christophe.Troestler@umons.ac.be>"
           "Edgar Friendly <thelema314@gmail.com>" ]
tags: ["scientfic" "root finding"]
license: "ISC"
homepage: "https://github.com/Chris00/root1d"
dev-repo: "https://github.com/Chris00/root1d.git"
bug-reports: "https://github.com/Chris00/root1d/issues"
build: [
  [ "jbuilder" "subst" ] {pinned}
  [ "jbuilder" "build" "-p" name "-j" jobs ]
]
depends: [
  "ocamlfind" {build}
  "jbuilder"  {build & >="1.0+beta9"}
]
depopts: [
  "benchmark"
]
available: [ ocaml-version >= "4.0.0" ]
