opam-version: "2.0"
maintainer: "Christophe Troestler <Christophe.Troestler@umons.ac.be>"
authors: [ "Christophe Troestler <Christophe.Troestler@umons.ac.be>"
           "Edgar Friendly <thelema314@gmail.com>" ]
tags: ["scientfic" "root finding" "Brent"]
license: "ISC"
homepage: "https://github.com/Chris00/root1d"
dev-repo: "git+https://github.com/Chris00/root1d.git"
bug-reports: "https://github.com/Chris00/root1d/issues"
doc: "https://chris00.github.io/root1d/doc/"
build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
  [ "dune" "build" "@doc" ] {with-doc}
]
depends: [
  "ocaml" {>= "4.02"}
  "dune"
  "benchmark" {with-test}
]
synopsis: "One dimensional root finding algorithms"
